# tosa_serialization_lib-mirror

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  groups  project.config  pyproject.toml  regenerate_headers.sh  reviewers.config
include/: attribute.def  attribute.h  cfloat.h  cfloat_forward.h  cmicroscaling.h  float_utils.h  numpy_utils.h  op.def  op.h  operator.def  quant_info.def  quant_info.h  tosa_generated.h  tosa_schema.h  tosa_serialization_handler.h
python/: tosa_serializer.py
python/pytests/: __init__.py  conftest.py  test_example.py  test_numpy_utils.py  test_single_attr.py  test_single_op.py  test_single_tensor.py  test_utils.py
python/pytests/examples/: test_conv2d_256x256x3_f32.json  test_select_2048x2048x3_i8.json
python/serializer/: __init__.py  numpy_utils.py  tosa_serializer.py
python/tosa/: ABS_Attribute.py  ADD_Attribute.py  ARGMAX_Attribute.py  ARITHMETIC_RIGHT_SHIFT_Attribute.py  AVG_POOL2D_Attribute.py  AbsAttribute.py  AddAttribute.py  ArgMaxAttribute.py  ArithmeticRightShiftAttribute.py  Attribute.py  AvgPool2dAttribute.py  AxisAttribute.py  BITWISE_AND_Attribute.py  BITWISE_NOT_Attribute.py  BITWISE_OR_Attribute.py  BITWISE_XOR_Attribute.py  BitwiseAndAttribute.py  BitwiseNotAttribute.py  BitwiseOrAttribute.py  BitwiseXorAttribute.py  CAST_Attribute.py  CAST_STOCHASTIC_Attribute.py  CEIL_Attribute.py  CLAMP_Attribute.py  CLZ_Attribute.py  CONCAT_Attribute.py  COND_IF_Attribute.py  CONST_Attribute.py  CONST_SHAPE_Attribute.py  CONV2D_Attribute.py  CONV3D_Attribute.py  COS_Attribute.py  CUSTOM_Attribute.py  CastAttribute.py  CeilAttribute.py  ClampAttribute.py  ClzAttribute.py  ConcatAttribute.py  CondIfAttribute.py  ConstAttribute.py  (+143 more)
schema/: convert_schema_to_header.py  tosa.fbs
src/: numpy_utils.cpp  tosa_serialization_handler.cpp
test/examples/: test_add_1x4x4x4_f32.tosa
test/gtests/: CMakeLists.txt  test_serialization_npy.cpp  test_serialization_read_write.cpp  test_serialization_unit.cpp  test_serialization_utils.h  test_single_attr.cpp  test_u8_conversion.cpp
test/scripts/: test_npy_fileio.py  test_serialization.py
test/scripts/testfiles/: test.tosa
test/src/: serialization_npy_test.cpp
